# kmcount

./: CMakeLists.txt  README.md
include/: bseq.hpp  common.hpp  hyperloglog.hpp  kmc.hpp
libbloom/: CMakeLists.txt  bloom64.cpp  bloom64.h
src/: bseq.cpp  kmc.cpp  main.cpp  murmurhash.cpp
